// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> when there is a return link matches the snapshot 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic border-only-b-neutral-200 css-1na8te8-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular flex items-center justify-between px-8 py-4 css-129s0w6-MuiToolbar-root"
      >
        <div
          class="flex min-h-[4rem] w-full items-center"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeStart MuiIconButton-sizeMedium css-14cf8m5-MuiButtonBase-root-MuiIconButton-root"
            data-testid="ArrowBackIconButton"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hgpioi-MuiSvgIcon-root"
              data-testid="ArrowBack"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <h5
            class="MuiTypography-root MuiTypography-h5 line-clamp-2 css-1h0fw4b-MuiTypography-root"
          >
            Test Title 2
          </h5>
        </div>
        <div
          class="flex shrink-0 items-center"
        />
      </div>
    </header>
    <div
      class="Toastify"
    />
  </div>
</body>
`;

exports[`<PageHeader /> when there is no return link matches the snapshot 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic border-only-b-neutral-200 css-1na8te8-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular flex items-center justify-between px-8 py-4 css-129s0w6-MuiToolbar-root"
      >
        <div
          class="flex min-h-[4rem] w-full items-center"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 line-clamp-2 css-1h0fw4b-MuiTypography-root"
          >
            Test Title 1
          </h5>
        </div>
        <div
          class="flex shrink-0 items-center"
        />
      </div>
    </header>
    <div
      class="Toastify"
    />
  </div>
</body>
`;
